Fixed header created, new styles has been applied on mobile and desktop views

--- a/react-cripto-api/src/index.css
+++ b/react-cripto-api/src/index.css
@@ -3,7 +3,7 @@
 
 body {
   background: rgb(2,0,36);
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgb(8, 31, 107) 60%, rgba(13,19,124,1) 100%);
+  background: radial-gradient(circle, rgb(29, 23, 145) 0%, rgb(8, 31, 107) 60%, rgba(13,19,124,1) 100%);
   color: #ffff
 }
 
@@ -11,15 +11,25 @@ body {
   max-width: 90%;
 }
 
+.container-header {
+  background: radial-gradient(circle, rgb(56 57 59) 0%, rgb(56 56 84) 60%, rgb(43 43 47) 100%);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  border-bottom: 1px solid #0745a3;
+  box-shadow: 0 4px 2px -2px gray;
+}
+
 #main-title {
   font-family: 'Slabo 27px', serif;
+  font-size: 30px;
   letter-spacing: 1.5px;
   padding-left: 0;
 }
 
 #main-title-icon {
-  width:45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
   margin: 0 15px 5px 0;
 }
 
@@ -62,6 +72,11 @@ body {
   }
 }
 
+.p-datatable .p-datatable-thead > tr > th,
+.p-datatable .p-datatable-tbody > tr  {
+  background: #202224
+}
+
 .coins-datatable .p-datatable-tbody .p-column-title {
   display: none;
 }
@@ -77,6 +92,10 @@ body {
 .chart-expand {
   width: 3em;
   padding-left: 1px;
+}
+
+.p-datatable .p-datatable-tbody > tr > td .p-row-toggler {
+  color:#1264dd;
 }
 
 
@@ -117,12 +136,20 @@ body {
     flex-direction: column;
   }
 
-  .coins-datatable .p-datatable-tbody > tr :nth-child(1)  /* Ranking */    { order: 1; }
+  .coins-datatable .p-datatable-tbody > tr :nth-child(1)  /* Ranking */    { order: 2; }
   .coins-datatable .p-datatable-tbody > tr :nth-child(2)  /* Expand */     { order: 6; }
-  .coins-datatable .p-datatable-tbody > tr :nth-child(3)  /* Coin */       { order: 2; }
+  .coins-datatable .p-datatable-tbody > tr :nth-child(3)  /* Coin */       { order: 1; text-align: center;}
   .coins-datatable .p-datatable-tbody > tr :nth-child(4)  /* Price */      { order: 3; }
   .coins-datatable .p-datatable-tbody > tr :nth-child(5)  /* 24h Change */ { order: 4; }
   .coins-datatable .p-datatable-tbody > tr :nth-child(6)  /* Market Cap */ { order: 5; }
+
+  .coins-datatable .p-datatable-tbody > tr :nth-child(3) .p-column-title {
+    display: none;
+  }
+
+  .img-fluid {
+    width: 70px !important;
+  }
 
   .coins-datatable .p-datatable-tbody > tr > td:nth-child(2) {
     border-bottom: 2px solid #1264dd;
@@ -141,6 +168,16 @@ body {
     bottom  : 0;
     width   : 90%;  /* or 100px */
     border-bottom: 2px solid #1264dd;
+  }
+
+  .p-datatable .p-datatable-tbody > tr > td .p-row-toggler,
+  .p-datatable .p-datatable-tbody > tr > td .p-row-toggler:enabled:hover {
+    border: 1px solid #1264dd;
+    color:#1264dd;
+  }
+
+  .p-link:focus {
+    box-shadow: none;
   }
 } 
 
